<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            android:padding="@dimen/_3sdp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetEnd="@dimen/_5sdp"
            app:contentInsetLeft="@dimen/_5sdp"
            app:contentInsetRight="@dimen/_5sdp"
            app:contentInsetStart="@dimen/_5sdp"
            app:elevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_3sdp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:contentDescription="@null"
                    android:padding="@dimen/_2sdp"
                    android:tint="@color/white"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/_13sdp"
                android:paddingRight="@dimen/_13sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_add"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipe_feed"
                    android:textColor="@color/grey_40"
                    android:textSize="@dimen/_10ssp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_8sdp"/>

                <RadioGroup
                    android:id="@+id/rgType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbRestock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_success"
                        android:checked="true"
                        android:text="@string/restock"
                        android:textColor="@color/color_success" />

                    <Space
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/rbIncome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:buttonTint="@color/color_warning"
                        android:textColor="@color/color_warning"/>

                    <Space
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/rbOutcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outcome"
                        android:buttonTint="@color/color_danger"
                        android:textColor="@color/color_danger"/>

                    <Space
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="wrap_content"/>

                </RadioGroup>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_12sdp"/>

                <LinearLayout
                    android:id="@+id/llRestock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_product"
                        android:textColor="@color/grey_40"
                        android:textSize="@dimen/_10ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/tv_variant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_70sdp"
                        android:background="@drawable/et_background"
                        android:ellipsize="end"
                        android:hint="@string/select_product_variant"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_50"
                        android:textSize="@dimen/_9ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_count"
                        android:textColor="@color/grey_40"
                        android:textSize="@dimen/_10ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />

                    <EditText
                        android:id="@+id/et_count"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_background"
                        android:inputType="number"
                        android:ellipsize="end"
                        android:hint="@string/null_number"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_50"
                        android:textSize="@dimen/_9ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grand_total"
                        android:textColor="@color/grey_40"
                        android:textSize="@dimen/_10ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_background"
                        android:ellipsize="end"
                        android:text="@string/null_money"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColorHint="@color/grey_50"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llIncome"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/grey_40"
                        android:textSize="@dimen/_10ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />

                    <EditText
                        android:id="@+id/et_nominal"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_background"
                        android:ellipsize="end"
                        android:hint="@string/null_number"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColorHint="@color/grey_50"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_12sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/note"
                        android:textColor="@color/grey_40"
                        android:textSize="@dimen/_10ssp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_8sdp" />

                    <EditText
                        android:id="@+id/et_note"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:gravity="top"
                        android:layout_marginEnd="@dimen/_70sdp"
                        android:background="@drawable/et_background"
                        android:ellipsize="end"
                        android:hint="@string/type_note"
                        android:maxLines="3"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey_50"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/llFooter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_warning"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textStyle="bold"
            style="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/color_warning_dark"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>