<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_24sdp"
            android:contentDescription="@null"
            android:src="@drawable/menu_title" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/overlay_light_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_14sdp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/hint_user"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_radius_info"
            android:gravity="center"
            android:text="@string/owner"
            android:textColor="@color/color_info"
            android:textSize="@dimen/_9ssp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/overlay_light_20" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

    <LinearLayout
        android:id="@+id/llDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/dashboardIcon"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_dashboard_active" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/feedIcon"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_feed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feed"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/productIcon"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_product" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/reportIcon"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_report" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_6sdp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_logout" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/white" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_create_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_radius_danger"
        android:gravity="center"
        android:text="@string/create_payment"
        android:textColor="@color/color_danger"
        android:textSize="@dimen/_10ssp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_add_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_radius_warning"
        android:gravity="center"
        android:text="@string/add_feed"
        android:textColor="@color/color_warning"
        android:textSize="@dimen/_10ssp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

</LinearLayout>